Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,14 +31,36 @@
         <h1>
 <a name="jspirates-podcast" class="anchor" href="#jspirates-podcast"><span class="octicon octicon-link"></span></a>JSPirates Podcast</h1>
 
+<p>Приблизительно еженедельный подкаст о Node.js, модулях, подходах и т.д.</p>
+
 <p>Этот репозиторий хранит в себе код и другую информацию, о которой мы говорим в подкасте JSPirates.</p>
 
 <p>Ведущие подкаста: <a href="http://github.com/dolphin278">Борис Егоров</a> и <a href="http://github.com/sitnin">Григорий Ситнин</a>.</p>
 
 <h2>
-<a name="s01e01" class="anchor" href="#s01e01"><span class="octicon octicon-link"></span></a>s01e01</h2>
+<a name="%D0%9F%D1%80%D1%8F%D0%BC%D0%B0%D1%8F-%D0%BF%D0%BE%D0%B4%D0%BF%D0%B8%D1%81%D0%BA%D0%B0" class="anchor" href="#%D0%9F%D1%80%D1%8F%D0%BC%D0%B0%D1%8F-%D0%BF%D0%BE%D0%B4%D0%BF%D0%B8%D1%81%D0%BA%D0%B0"><span class="octicon octicon-link"></span></a>Прямая подписка</h2>
 
-<p>Эпизод, в котором мы рассказываем о LevelDb и работе со стримами.</p>
+<ul>
+<li>
+<strong>JSPirates HD</strong> — видео 720p, <a href="https://s3.amazonaws.com/jspirates/jsp_720p.xml">https://s3.amazonaws.com/jspirates/jsp_720p.xml</a>
+</li>
+<li>
+<strong>JSPirates</strong> — видео 480p, <a href="https://s3.amazonaws.com/jspirates/jsp_480p.xml">https://s3.amazonaws.com/jspirates/jsp_480p.xml</a> (файлы в 2 раза меньше)</li>
+<li>
+<strong>JSPirates audio</strong> — только звук, <a href="https://s3.amazonaws.com/jspirates/jsp_audio.xml">https://s3.amazonaws.com/jspirates/jsp_audio.xml</a> (есть, что послушать ;)</li>
+</ul><h2>
+<a name="%D0%9F%D0%BE%D0%B4%D0%BF%D0%B8%D1%81%D0%BA%D0%B0-%D1%87%D0%B5%D1%80%D0%B5%D0%B7-itunes" class="anchor" href="#%D0%9F%D0%BE%D0%B4%D0%BF%D0%B8%D1%81%D0%BA%D0%B0-%D1%87%D0%B5%D1%80%D0%B5%D0%B7-itunes"><span class="octicon octicon-link"></span></a>Подписка через iTunes</h2>
+
+<ul>
+<li><strong><a href="https://itunes.apple.com/ru/podcast?684240414">JSPirates HD</a></strong></li>
+<li><strong><a href="https://itunes.apple.com/ru/podcast?684239969">JSPirates</a></strong></li>
+<li><strong><a href="https://itunes.apple.com/ru/podcast?684239776">JSPirates audio</a></strong></li>
+</ul><h2>
+<a name="%D0%AD%D0%BF%D0%B8%D0%B7%D0%BE%D0%B4%D1%8B" class="anchor" href="#%D0%AD%D0%BF%D0%B8%D0%B7%D0%BE%D0%B4%D1%8B"><span class="octicon octicon-link"></span></a>Эпизоды</h2>
+
+<ul>
+<li>s01e01 — Эпизод, в котором мы рассказываем о LevelDb и работе со стримами.</li>
+</ul>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/JSPirates">JSPirates</a></p>
