--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 <p>Ведущие подкаста: <a href="http://github.com/dolphin278">Борис Егоров</a> и <a href="http://github.com/sitnin">Григорий Ситнин</a>.</p>
 
 <h2>
+<a name="%D0%9F%D1%80%D0%BE%D1%81%D0%BC%D0%BE%D1%82%D1%80-online" class="anchor" href="#%D0%9F%D1%80%D0%BE%D1%81%D0%BC%D0%BE%D1%82%D1%80-online"><span class="octicon octicon-link"></span></a>Просмотр online</h2>
+
+<ul>
+<li><a href="http://www.youtube.com/channel/UCoQvColVafC905L1wyqfjcg">YouTube</a></li>
+</ul><h2>
 <a name="%D0%9F%D1%80%D1%8F%D0%BC%D0%B0%D1%8F-%D0%BF%D0%BE%D0%B4%D0%BF%D0%B8%D1%81%D0%BA%D0%B0" class="anchor" href="#%D0%9F%D1%80%D1%8F%D0%BC%D0%B0%D1%8F-%D0%BF%D0%BE%D0%B4%D0%BF%D0%B8%D1%81%D0%BA%D0%B0"><span class="octicon octicon-link"></span></a>Прямая подписка</h2>
 
 <ul>
@@ -52,13 +57,9 @@
 <a name="%D0%9F%D0%BE%D0%B4%D0%BF%D0%B8%D1%81%D0%BA%D0%B0-%D1%87%D0%B5%D1%80%D0%B5%D0%B7-itunes" class="anchor" href="#%D0%9F%D0%BE%D0%B4%D0%BF%D0%B8%D1%81%D0%BA%D0%B0-%D1%87%D0%B5%D1%80%D0%B5%D0%B7-itunes"><span class="octicon octicon-link"></span></a>Подписка через iTunes</h2>
 
 <ul>
-<li><strong><a href="http://itunes.apple.com/ru/podcast?684240414">JSPirates HD</a></strong></li>
-<li><strong><a href="http://itunes.apple.com/ru/podcast?684239776">JSPirates audio</a></strong></li>
-</ul><h2>
-<a name="%D0%9F%D1%80%D0%BE%D1%81%D0%BC%D0%BE%D1%82%D1%80-online" class="anchor" href="#%D0%9F%D1%80%D0%BE%D1%81%D0%BC%D0%BE%D1%82%D1%80-online"><span class="octicon octicon-link"></span></a>Просмотр online</h2>
-
-<ul>
-<li><a href="http://www.youtube.com/channel/UCoQvColVafC905L1wyqfjcg">YouTube</a></li>
+<li><strong><a href="https://itunes.apple.com/ru/podcast/jspirates-hd/id684240414">JSPirates HD</a></strong></li>
+<li><strong><a href="https://itunes.apple.com/ru/podcast/jspirates/id684239969">JSPirates</a></strong></li>
+<li><strong><a href="https://itunes.apple.com/ru/podcast/jspirates-tol-ko-audio/id684239776">JSPirates audio</a></strong></li>
 </ul><h2>
 <a name="%D0%AD%D0%BF%D0%B8%D0%B7%D0%BE%D0%B4%D1%8B" class="anchor" href="#%D0%AD%D0%BF%D0%B8%D0%B7%D0%BE%D0%B4%D1%8B"><span class="octicon octicon-link"></span></a>Эпизоды</h2>
 
